[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peasy-document"
version = "0.2.0"
description = "Document conversion library — Markdown, HTML, CSV, and JSON transformations with zero heavyweight dependencies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Peasy Tools" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
keywords = ["document", "markdown", "html", "csv", "json", "converter", "peasy"]
dependencies = ["markdown>=3.5"]

[project.optional-dependencies]
cli = ["typer>=0.9"]
dev = ["mypy>=1.10", "pytest>=8.0", "ruff>=0.4", "types-Markdown>=3.5"]
all = ["typer>=0.9"]

[project.scripts]
peasy-document = "peasy_document.cli:app"

[project.urls]
Homepage = "https://peasytools.com"
Repository = "https://github.com/peasytools/peasy-document"
Issues = "https://github.com/peasytools/peasy-document/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/peasy_document"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
